--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
             <li> <a class="btn" href="/homework/html/weather-homepage.html">Weather Homepage</a></li>
             <li> <a class="btn" href="/homework/wdd-100/index.html"> WDD-100 </a>
             <li> <a class="btn" href="https://aaronatorblog.wordpress.com/"> Blog </a></li>
+            <li> <a class="btn" href="https://aaronatorblog.wordpress.com/"> Blog </a></li>
+</ul>
 
-        </ul>
 
 
 
