--- a/acme/acme.html
+++ b/acme/acme.html
@@ -7,21 +7,21 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="/acme/css/acme.css" media="screen">
-    <script
-            src="https://code.jquery.com/jquery-3.2.1.min.js"
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous"></script>
     <script src="/acme/js/acme.js"></script>
 
 <body id = "body">
-<div id = "container">
+<section id = "container">
 <header id = "header">
-    <h1>Acme Site</h1>
-    <h2 class="tagline">Know your items</h2>
+    <img id ="logo" src="images/site/logo.png" alt="logo for the site">
+
 
     <nav>
-        <ul id ="nav" class="flexlist">
-            <li><a href="/acme/views/home.html" title="Home">Home</a></li>
+
+        <ul  class="flexlist">
+           <li><a href="/acme/acme.html" title="Home">Home</a></li>
             <!--<li><a href="/acme/views/anvils.html" title="Anvils">Anvils</a></li>
             <li><a href="/acme/views/explosives.html" title="explosives">Explosives</a></li>
             <li><a href="/acme/views/decoys.html" title="Decoys">Decoys</a></li>
@@ -33,7 +33,9 @@
 
 <main id = "page">
 
-<div id = "home">
+<section id = "home">
+    <h1>Welcome to Acme</h1>
+    <section id ="rocket">
     <ul class = acme-list>
         <li><h2>Acme Rocket</h2></li>
         <li>Quick lighting fuse</li>
@@ -41,22 +43,42 @@
         <li>Mobile launch stand included</li>
         <li><a href="#"><img id="actionbtn" alt="Add to cart button" src="/acme/images/site/iwantit.gif"></a></li>
     </ul>
-
-    <ul>
+    </section>
+    <section>
+<section class = "styling">
+    <ul id = "ratings">
         <li>"I don't know how I ever caught roadrunners before this." (9/10)</li>
         <li>"That thing was fast!" (4/5)</li>
         <li>"Talk about fast delivery." (5/5)</li>
         <li>"I didn't even have to pull the meat apart." (4.5/5)</li>
         <li>"I'm on my thirtieth one. I love these things!" (5/5)</li>
     </ul>
-    Pulled Roadrunner BBQ
-    Roadrunner Pot Pie
-    Roadrunner Soup
-    Roadrunner Tacos
-    </div>
-    <div id = "content">
+    </section>
+        <section class = "styling">
+    <section class = "recipes">
+        <img src="images/recipes/bbqsand.jpg"><br>
+        Pulled Roadrunner BBQ
 
-    </div>
+
+                <img src="images/recipes/potpie.jpg"><br>
+                Pulled Roadrunner BBQ
+                            <img src="images/recipes/soup.jpg"><br>
+                Pulled Roadrunner BBQ
+
+                <img src="images/recipes/taco.jpg"><br>
+                Pulled Roadrunner BBQ
+            </section>
+        </section>
+    </section>
+    </section>
+    <section id = "content">
+<h1 id = "name"></h1>
+        <section id ="product_img"></section>
+        <p id = "price"></p>
+        <p id = "description"></p>
+        <p id = "manufacturer"></p>
+        <p id = "reviews"></p>
+    </section>
 
 </main>
 <footer id = "page-footer">
@@ -68,7 +90,7 @@
 
 
 
-    </div>
+    </section>
 </body>
 </html>
 
