--- a/acme/acme.html
+++ b/acme/acme.html
@@ -44,31 +44,35 @@
         <li><a href="#"><img id="actionbtn" alt="Add to cart button" src="/acme/images/site/iwantit.gif"></a></li>
     </ul>
     </section>
-    <section>
-<section class = "styling">
-    <ul id = "ratings">
-        <li>"I don't know how I ever caught roadrunners before this." (9/10)</li>
-        <li>"That thing was fast!" (4/5)</li>
-        <li>"Talk about fast delivery." (5/5)</li>
-        <li>"I didn't even have to pull the meat apart." (4.5/5)</li>
-        <li>"I'm on my thirtieth one. I love these things!" (5/5)</li>
-    </ul>
-    </section>
+    <section id="duh">
         <section class = "styling">
     <section class = "recipes">
         <img src="images/recipes/bbqsand.jpg"><br>
         Pulled Roadrunner BBQ
-
-
+            </section>
+            <section class = "recipes">
                 <img src="images/recipes/potpie.jpg"><br>
                 Pulled Roadrunner BBQ
+            </section>
+            <section class = "recipes">
                             <img src="images/recipes/soup.jpg"><br>
                 Pulled Roadrunner BBQ
-
+            </section>
+            <section class = "recipes">
                 <img src="images/recipes/taco.jpg"><br>
                 Pulled Roadrunner BBQ
             </section>
         </section>
+        <section class = "styling">
+            <ul id = "ratings">
+                <li>"I don't know how I ever caught roadrunners before this." (9/10)</li>
+                <li>"That thing was fast!" (4/5)</li>
+                <li>"Talk about fast delivery." (5/5)</li>
+                <li>"I didn't even have to pull the meat apart." (4.5/5)</li>
+                <li>"I'm on my thirtieth one. I love these things!" (5/5)</li>
+            </ul>
+        </section>
+
     </section>
     </section>
     <section id = "content">
