--- a/acme/acme.html
+++ b/acme/acme.html
@@ -13,6 +13,7 @@
     <script src="/acme/js/acme.js"></script>
 
 <body id = "body">
+    <div id = "wrapper">
 <section id = "container">
 <header id = "header">
     <img id ="logo" src="images/site/logo.png" alt="logo for the site">
@@ -95,6 +96,7 @@
 
 
     </section>
+    </div>
 </body>
 </html>
 
