--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <li> <a class="btn" href="/homework/wdd-100/index.html"> WDD-100 </a>
             <li> <a class="btn" href="https://aaronatorblog.wordpress.com/"> Blog </a></li>
             <li> <a class="btn" href="/acme/acme.html"> Acme Site</a></li>
+            <li> <a class="btn" href="/acme/template.html"> Acme Template</a></li>
 </ul>
 
 
