--- a/acme/acme.html
+++ b/acme/acme.html
@@ -65,7 +65,7 @@
             </section>
         </section>
         <section class = "styling">
-            <ul id = "ratings">
+            <ul class = "ratings">
                 <li>"I don't know how I ever caught roadrunners before this." (9/10)</li>
                 <li>"That thing was fast!" (4/5)</li>
                 <li>"Talk about fast delivery." (5/5)</li>
