--- a/acme/acme.html
+++ b/acme/acme.html
@@ -16,8 +16,9 @@
     <div id = "wrapper">
 <section id = "container">
 <header id = "header">
-    <img id ="logo" src="images/site/logo.png" alt="logo for the site">
-
+    <div id = "logo">
+    <img  src="images/site/logo.png" alt="logo for the site">
+    </div>
 
     <nav>
 
@@ -46,24 +47,27 @@
     </ul>
     </section>
     <section id="duh">
-        <section class = "styling">
+
     <section class = "recipes">
-        <img src="images/recipes/bbqsand.jpg"><br>
+        <ul>
+        <li><img src="images/recipes/bbqsand.jpg"><br>
         Pulled Roadrunner BBQ
-            </section>
-            <section class = "recipes">
+            </li>
+
+            <li>
                 <img src="images/recipes/potpie.jpg"><br>
                 Pulled Roadrunner BBQ
-            </section>
-            <section class = "recipes">
-                            <img src="images/recipes/soup.jpg"><br>
+            </li>
+            <li><img src="images/recipes/soup.jpg"><br>
                 Pulled Roadrunner BBQ
-            </section>
-            <section class = "recipes">
-                <img src="images/recipes/taco.jpg"><br>
+            </li>
+
+            <li><img src="images/recipes/taco.jpg"><br>
                 Pulled Roadrunner BBQ
+            </li>
+        </ul>
             </section>
-        </section>
+
         <section class = "styling">
             <ul class = "ratings">
                 <li>"I don't know how I ever caught roadrunners before this." (9/10)</li>
