--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <li> <a class="btn" href="https://aaronatorblog.wordpress.com/"> Blog </a></li>
             <li> <a class="btn" href="/acme/acme.html"> Acme Site</a></li>
             <li> <a class="btn" href="/acme/template.html"> Acme Template</a></li>
+            <li> <a class="btn" href="/html%2520activity/eyring.html"> Website for COMM 310</a></li>
 </ul>
 
 
