--- a/html-activity/eyring.html
+++ b/html-activity/eyring.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src = "/html-activity/images/logo.png">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="talks.html">Talks</a></li>
@@ -20,12 +21,13 @@
         <p>I would be my brother’s keeper; I would learn the healer’s art. To the wounded and the weary I would show a gentle heart. I would be my brother’s keeper–</p>
 
         <ul>
-            <li><a href="#Hunter">   President Hunter  </a> </li>
-            <li><a href="#Eyring">   President Eyring  </a> </li>
-            <li><a href="#Burton">   Sister Burton     </a> </li>
-            <li><a href="#Oscarson"> Sister Oscarson   </a> </li>
+            <li><a href="#Hunter">   <img src = "images/thumb/hunter-300-x-300.jpg">   President Hunter  </a> </li>
+            <li><a href="#Eyring">   <img src = "images/thumb/eyring-300-x-300.jpg">   President Eyring  </a> </li>
+            <li><a href="#Burton">   <img src = "images/thumb/burton-300-x-300.jpg">   Sister Burton     </a> </li>
+            <li><a href="#Oscarson"> <img src = "images/thumb/oscarson-300-x-300.jpg"> Sister Oscarson   </a> </li>
         </ul>
 
+        <img src= "images/large/hunter-large.jpg">
         <h2 id = Hunter> A more excellent way </h2>
 
         <p>Howard W. Hunter</p>
@@ -66,10 +68,10 @@
 
         <p>I add my witness that Jesus is the Christ, the Savior of the world, and that this is his church, in the name of Jesus Christ, amen.</p>
 
-        <a href ="https://lds.org/general-conference/1992/04/a-more-excellent-way">Read the full article on LDS.org </a>
+        <a href ="https://lds.org/general-conference/1992/04/a-more-excellent-way">Read the full article on LDS.org </a><br>
 
 
-
+        <img src= "images/large/eyring-large.jpg">
         <h2 id ="Eyring"> Bind Up Their Wounds</h2>
 
         <p>Henry B. Eyring</p>
@@ -90,9 +92,9 @@
         <p>I pray that we may prepare ourselves to give whatever priesthood service the Lord may set before us on our mortal journey. In the sacred name of Jesus Christ, amen.</p>
 
         <a href ="https://lds.org/general-conference/2013/10/bind-up-their-wounds">Read the full article on LDS.org </a>
+        <br>
 
-
-
+        <img src= "images/large/burton-large.jpg">
         <h3 id="Burton"> First Observe, Then Serve </h3>
 
         <p>Linda Burton</p>
@@ -106,8 +108,8 @@
         <p>May we all seek to first observe, then serve. As we do so, we are keeping covenants, and our service, like President Monson’s, will be evidence of our discipleship. I know the Savior lives. His Atonement enables us to live His teachings. I know President Monson is our prophet today. In the name of Jesus Christ, amen.</p>
 
         <a href ="https://lds.org/general-conference/2012/10/first-observe-then-serve">Read the full article on LDS.org </a>
-
-
+        <br>
+        <img src= "images/large/oscarson-large.jpg">
         <h3 id="Oscarson"> Sisterhood: Oh, How We Need Each Other</h3>
 
         <p>Bonnie L. Oscarson</p>
